AI info for a few blocks

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -114,3 +114,8 @@ html[data-theme='dark'] main a {
   color: inherit !important;
   text-decoration: underline !important;
 }
+
+/* AI related */
+.keywords, .ai-info {
+  color: transparent;
+}
